更改班级成员样式

--- a/JiaoBaoYun-hb/html/mine/apply-group.html
+++ b/JiaoBaoYun-hb/html/mine/apply-group.html
@@ -58,7 +58,7 @@
 			<textarea id="extra-input" class="extra-input" rows="2" placeholder="请输入备注信息，最多20字"></textarea>
 			<div class="buttons">
 				<button id="btn-sure" type="button" class="mui-btn mui-btn-green btn-sure">确认</button>
-				<!--<button  type="button" class="mui-btn mui-btn-green btn-cancel">取消</button>-->
+				<!--<button  type="button" class="  -btn mui-btn-green btn-cancel">取消</button>-->
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
