--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -16,6 +16,15 @@
 			body {
 				min-height: 100%;
 			}
+			.mui-navigate-right{
+				font-size: 1.6rem;
+			}
+			.mui-navigate-right p{
+				font-size: 1.3rem;
+			}
+			.group-personName{
+				font-size: 1.3rem;
+			}
 		</style>
 	</head>
 
