--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -85,8 +85,8 @@
 		<script type="text/javascript" charset="utf-8">
 			mui.init({
 				keyEventBind: {
-					backbutton: false,//android返回键不可用
-					menubutton: false//android系统按钮不可用
+					backbutton: false, //android返回键不可用
+					menubutton: false //android系统按钮不可用
 				}
 			});
 			mui('.mui-scroll-wrapper').scroll({
@@ -109,16 +109,18 @@
 				events.addTap('title', function() {
 					if(plus.os.name == 'Android') {
 						setTimeout(function() {
-							closeMenu();//关闭侧滑菜单
+							closeMenu(); //关闭侧滑菜单
 						}, 250);
 					} else {
-						closeMenu();//关闭侧滑菜单
+						closeMenu(); //关闭侧滑菜单
 					}
 					//打开账户信息新页面
 					events.openNewWindow('/html/mine/account-info.html')
 				})
 				//侧滑菜单各项点击事件
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
+					this.disabled=true;
+					jQuery(this).css("pointerEvents","none");
 					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
 					console.log('click position:' + this.getAttribute('position'))
 					console.log("系统名称：" + plus.os.name);
@@ -142,33 +144,32 @@
 						default:
 							break;
 					}
-
+					var targetWebUrl="";
+					var data = {};
 					switch(parseInt(this.getAttribute('position'))) {
 						case 0: //群管理
-							events.openNewWindowWithData('/html/mine/qun_manage_a.html', {
+							targetWebUrl = '/html/mine/qun_manage_a.html';
+							data = {
 								type: '0' //0群管理,1人员资料
-							});
+							}
 							break;
 						case 1: //人员资料
-							events.openNewWindowWithData('/html/mine/qun_manage_a.html', {
+							targetWebUrl = '/html/mine/qun_manage_a.html';
+							data = {
 								type: '1' //0群管理,1人员资料
-							});
+							}
 							break;
 							//申请加入群
 						case 2:
-							var recordPage = plus.webview.getWebviewById('apply-record.html')
-							if(recordPage && recordPage != null) {
-								recordPage.reload(true);
-							}
-							events.openNewWindow('/html/mine/apply-record.html');
+							targetWebUrl = '/html/mine/apply-record.html';
 							break;
 							//新消息
 						case 3:
-							events.openNewWindow('/html/mine/approval-apply.html');
+							targetWebUrl = '/html/mine/approval-apply.html';
 							break;
 							//我的空间
 						case 4:
-							events.openNewWindowWithData('/html/quan/zone_main.html', personalUTID);
+							targetWebUrl = '/html/quan/zone_main.html';
 							break;
 							//积分
 						case 5:
@@ -177,26 +178,27 @@
 							break;
 							//设置
 						case 6:
-//							events.openNewWindow('/html/mine/setting.html');
-							events.openNewWindowWithData('/html/mine/setting.html', '');
+							targetWebUrl = '/html/mine/setting.html';
 							break;
 							//关于
 						case 7:
-							//							mui.toast('施工中,请稍候...');
-							events.openNewWindow('/html/mine/about.html')
+							targetWebUrl = '/html/mine/about.html';
 							break;
-						case 8://新闻审核
-							events.openNewWindow('/html/check/check-news.html');
+						case 8: //新闻审核
+							targetWebUrl = '/html/check/check-news.html';
 							break;
 						default:
 							break;
+					}
+					if(targetWebUrl){
+						events.singleWebviewInPeriod(this,targetWebUrl,data);
 					}
 				});
 			})
 			//个人信息改变
 			window.addEventListener('infoChanged', function() {
 				console.log("我的界面获取信息修改infoChanged");
-				getInfo()
+				getInfo();
 			})
 			//新消息数量改变
 			window.addEventListener('newsChanged', function() {
@@ -221,11 +223,11 @@
 				} else {
 					document.getElementById('utext').innerText = "暂无签名";
 				}
-				if(parseInt(info.issys)){
-//				if(1){
-					document.querySelector('#check-news').style.display="block";
-				}else{
-					document.querySelector('#check-news').style.display="none";
+				if(parseInt(info.issys)) {
+					//				if(1){
+					document.querySelector('#check-news').style.display = "block";
+				} else {
+					document.querySelector('#check-news').style.display = "none";
 				}
 				getNewsAmount();
 			}
