如果先拍照 然后点击视频按钮 然后删除图片 点击录制视频按钮 录制视频按钮无反应

--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -135,6 +135,7 @@
 							default:
 								break;
 						}
+						jQuery("#take_camero").css('pointerEvents', 'all');
 						return;
 					}
 					video.recordVideo({}, function(path) {
