--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -263,6 +263,7 @@
 							default:
 								break;
 						}
+						jQuery("#take_camero").css('pointerEvents', 'all');
 						return;
 					}
 					video.recordVideo({}, function(path) {
