--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -119,8 +119,8 @@
 				})
 				//侧滑菜单各项点击事件
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
-					this.disabled=true;
-					jQuery(this).css("pointerEvents","none");
+					this.disabled = true;
+					jQuery(this).css("pointerEvents", "none");
 					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
 					console.log('click position:' + this.getAttribute('position'))
 					console.log("系统名称：" + plus.os.name);
@@ -144,7 +144,7 @@
 						default:
 							break;
 					}
-					var targetWebUrl="";
+					var targetWebUrl = "";
 					var data = {};
 					switch(parseInt(this.getAttribute('position'))) {
 						case 0: //群管理
@@ -174,7 +174,8 @@
 							//积分
 						case 5:
 							mui.toast('积分功能暂未开放！');
-
+							this.disabled = false;
+							jQuery(this).css("pointerEvents", "all");
 							break;
 							//设置
 						case 6:
@@ -190,8 +191,8 @@
 						default:
 							break;
 					}
-					if(targetWebUrl){
-						events.singleWebviewInPeriod(this,targetWebUrl,data);
+					if(targetWebUrl) {
+						events.singleWebviewInPeriod(this, targetWebUrl, data);
 					}
 				});
 			})
