--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -544,27 +544,29 @@
 											pathList.push(element.fpath);
 										}
 									});
-									var batchDelete = {
-										appId: 4, //int 必填 项目id
-										urls: pathList //array 必填 需要获取下载token文件的路径
-									}
-									/**
-									 * 七牛批量删除
-									 */
-									CloudFileUtil.BatchDelete(window.storageKeyName.QNGETTOKENDELETE, batchDelete, function(data) {
-											if(data.Status == 1) {
-												//mui.toast('七牛删除成功');
-												console.log('七牛删除成功:' + JSON.stringify(data));
-											} else {
-												mui.toast('七牛删除失败' + JSON.stringify(data));
-												console.log('七牛删除:' + JSON.stringify(data));
-											}
-										},
-										function(xhr, type, errorThrown) {
-											mui.toast('七牛删除失败' + JSON.stringify(type));
-											console.log('七牛删除失败:' + JSON.stringify(type));
+									if(pathList.length != 0) {
+										var batchDelete = {
+											appId: 4, //int 必填 项目id
+											urls: pathList //array 必填 需要获取下载token文件的路径
 										}
-									);
+										/**
+										 * 七牛批量删除
+										 */
+										CloudFileUtil.BatchDelete(window.storageKeyName.QNGETTOKENDELETE, batchDelete, function(data) {
+												if(data.Status == 1) {
+													//mui.toast('七牛删除成功');
+													console.log('七牛删除成功:' + JSON.stringify(data));
+												} else {
+													mui.toast('七牛删除失败' + JSON.stringify(data));
+													console.log('七牛删除:' + JSON.stringify(data));
+												}
+											},
+											function(xhr, type, errorThrown) {
+												mui.toast('七牛删除失败' + JSON.stringify(type));
+												console.log('七牛删除失败:' + JSON.stringify(type));
+											}
+										);
+									}
 								} else {
 									mui.toast(data.RspTxt);
 								}
@@ -573,7 +575,7 @@
 						} else {
 
 						}
-					})
+					},'div');
 				});
 
 				/**
