H5提供的音频播放有问题，改为使用音频标签的方法

--- a/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
@@ -109,7 +109,7 @@
 				var upFile = null; //记录上传的文件
 				var pid = ''; //文件的上层ID
 				if(mui.os.android) {
-					document.getElementById("local").style.display = 'inline-block';
+					document.getElementById("local").style.display = 'block';
 				}
 
 				//初始化
