--- a/JiaoBaoYun-hb/html/quan/aboutme.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme.html
@@ -4,14 +4,13 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>与我相关</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
-		<!--<link rel="stylesheet" href="../../css/quan/about-me.css" />-->
-		<script src="../../js/mui.min.js"></script>
+		<link rel="stylesheet" href="../../css/quan/about-me.css" />
 	</head>
 
 	<body>
@@ -19,34 +18,25 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left common-color-white"></a>
 			<h1 class="mui-title common-color-white common-font-family-Regular">与我相关</h1>
 		</header>
-
-		<div class="mui-content"></div>
-
+		<!--下拉刷新容器-->
+		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
+			<div class="mui-scroll">
+				<!--数据列表-->
+				<ul id="list-container" class="mui-table-view">
+				</ul>
+			</div>
+		</div>
+		<script src="../../js/mui.min.js"></script>
+		<!--公共事件js-->
+		<script src="../../js/utils/events.js"></script>
+		<!--h5刷新-->
+		<script src="../../js/utils/h5fresh.js"></script>
+		<!--公共接口-->
+		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<!--作业接口-->
+		<script type="text/javascript" src="../../js/publicHomeworkProtocol.js"></script>
+		<!--本页js-->
+		<script src="../../js/quan/about-me.js"></script>
 	</body>
-	<script src="../../js/utils/events.js"></script>
-	<script type="text/javascript">
-		events.initSubPage('aboutme_sub.html');
-		mui.plusReady(function() {
-			events.changeTopPocket();
-			//重写系统返回方法
-			var _back = mui.back;
-			mui.back = function() {
-				if(plus.webview.currentWebview().opener().id = "homework-commented.html") {
-					events.hidePagesExIndex();
-					_back();
-				} else {
-					_back();
-				}
-			}
-		})
-		var contentWebview = null;
-		//双击标题栏事件
-		document.querySelector('header').addEventListener('doubletap', function() {
-			if(contentWebview == null) {
-				contentWebview = plus.webview.currentWebview().children()[0];
-			}
-			contentWebview.evalJS("mui('#pullrefresh').pullRefresh().scrollTo(0,0,100)");
-		});
-	</script>
 
 </html>
