我的界面跳转个人空间传值

--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -170,6 +170,7 @@
 							//我的空间
 						case 4:
 							targetWebUrl = '/html/quan/zone_main.html';
+							data=personalUTID;
 							break;
 							//积分
 						case 5:
