晒一晒标题限制字数 动态详情点击点赞的人或者评论人无法跳转的问题

--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -95,7 +95,7 @@
 			//				console.log('发布动态页面获取的值：' + JSON.stringify(groupInfo));
 			//			});
 			var title = document.getElementById('title');
-			title.innerText = userInfo.unick;
+			title.innerText = events.shortForString(userInfo.unick, 12)
 			if(pageFlag == 'jxq') {
 				console.log('jxq')
 				//				document.getElementById("show").checked = false;
