--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
@@ -123,8 +123,7 @@
 				//点击cell,跳转回答详情页
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
 					var index = this.id.replace('li', '');
-					events.fireToPageNone('qiuzhi-answerDetailSub.html', 'answerInfo', answerArray[index]);
-					plus.webview.getWebviewById('qiuzhi-answerDetail.html').show("slide-in-right", 250);
+					events.fireToPageWithData('qiuzhi-answerDetail.html', 'answerInfo', answerArray[index]);
 				});
 
 				//阻尼系数、初始化刷新加载更多
