0005804: 老师账号，点击作业详情，点击已完成的学生作业，初次进入会闪一下其他带有图片的作业内容

--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -28,13 +28,13 @@
 					<div class='student-info'>
 						<img id="stu-head" class="stuInfo-img" src="http://oigr7qsvz.bkt.clouddn.com/headimge4.png?1487316536287" />
 						<div class='stuInfo-words'>
-							<h5 id='stu-name' class="stu-name">rockan007</h5>
-							<p id='submit-time' class="submit-time">2017-03-28 11:20:51</p>
+							<h5 id='stu-name' class="stu-name"></h5>
+							<p id='submit-time' class="submit-time"></p>
 						</div>
 					</div>
 					<div id="homework-info" class="homework-info">
-						<p class="answer-info">fdsgfdsgfdgsgdf</p>
-						<div id="answer-imgs" class="answer-imgs"><img class="answer-img" src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/thumb/1492754862612.jpg" style="width:110px;height:110px;"data-preview-src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/1492754862612.jpg" data-preview-group="undefined"/><img class="answer-img" src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/thumb/1492754862602.jpg" style="width:110px;height:110px;"data-preview-src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/1492754862602.jpg" data-preview-group="undefined"/><img class="answer-img" src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/thumb/1492754863082.jpg" style="width:110px;height:110px;"data-preview-src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/1492754863082.jpg" data-preview-group="undefined"/><img class="answer-img" src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/thumb/1492754863395.jpg" style="width:110px;height:110px;"data-preview-src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/1492754863395.jpg" data-preview-group="undefined"/><img class="answer-img" src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/thumb/1492754862489.jpg" style="width:110px;height:110px;"data-preview-src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/1492754862489.jpg" data-preview-group="undefined"/><img class="answer-img" src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/thumb/1492754862443.jpg" style="width:110px;height:110px;"data-preview-src="http://qn-kfpb.jiaobaowang.net/jxq/ClassSpace/1492754862443.jpg" data-preview-group="undefined"/></div>
+						<p class="answer-info"></p>
+						<div id="answer-imgs" class="answer-imgs"></div>
 					</div>
 				</div>
 				<!--<div class="result-container">
